[gd_scene load_steps=6 format=3 uid="uid://61rxl5yunypl"]

[ext_resource type="Script" path="res://Scripts/joystickTest.gd" id="1_2b4ed"]
[ext_resource type="Texture2D" uid="uid://ce5y575nnlkib" path="res://Images/TempJoystick.png" id="2_og1b6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7b4nv"]
size = Vector2(65.2903, 25.4791)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ouf6g"]
size = Vector2(23.9299, 65.6169)

[sub_resource type="CircleShape2D" id="CircleShape2D_vpl1c"]
radius = 17.3239

[node name="Joystick" type="Sprite2D" groups=["LabObjects"]]
position = Vector2(688, 313)
scale = Vector2(2.29722, 2.31944)
texture = ExtResource("2_og1b6")
script = ExtResource("1_2b4ed")

[node name="leftArrow" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftArrow"]
position = Vector2(-46.5811, 0.431137)
shape = SubResource("RectangleShape2D_7b4nv")

[node name="rightArrow" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightArrow"]
position = Vector2(46.578, 0.431137)
shape = SubResource("RectangleShape2D_7b4nv")

[node name="upArrow" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="upArrow"]
position = Vector2(0.659027, -47.4252)
shape = SubResource("RectangleShape2D_ouf6g")

[node name="downArrow" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="downArrow"]
position = Vector2(6.19888e-06, 46.9941)
shape = SubResource("RectangleShape2D_ouf6g")

[node name="panningSpeed" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="panningSpeed"]
position = Vector2(55.2842, 55.1857)
shape = SubResource("CircleShape2D_vpl1c")
